<!-- 
Author: Victor Malchikov
FileName: strings.xml
 -->
<resources>

    <string name="app_name">Launcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="prompt_one">Select from the following items:</string>
    <string name="prompt_two">Enter information below: </string>
    <string name="prompt_three">Enter information: </string>
    <string name="launcher">Application Launcher Helper</string>
    <string name="dial">Dial Phone</string>
    <string name="map">Google Map</string>
    <string name="web">Web Search</string>

</resources>

